--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
   </div>
 
   <script>
-    const SERVER_URL = ""; // 나중에 백엔드 URL 넣기
+    const SERVER_URL = "https://ce7d8a19-6208-4b13-9c53-fd3c437b8ee6-00-3oh3gkzzkbz3g.sisko.replit.dev/"; // 나중에 백엔드 URL 넣기
 
     async function register(event) {
       event.preventDefault();
@@ -335,4 +335,5 @@
   </script>
 </body>
 </html>
+
 
