--- a/index.html
+++ b/index.html
@@ -5,275 +5,279 @@
   <title>사주 분석 웹서비스</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&family=Orbitron:wght@500;700&display=swap" rel="stylesheet" />
+
   <style>
-    :root {
-      --bg-main: #050814;
-      --bg-card: rgba(10, 15, 35, 0.95);
-      --accent: #0ef3a8;
-      --accent-soft: rgba(14, 243, 168, 0.15);
-      --accent-second: #3f8cff;
-      --text-main: #f5f7ff;
-      --text-sub: #9aa3c2;
-      --border-soft: rgba(255, 255, 255, 0.08);
-      --error: #ff4b6e;
-    }
-
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
-
+    /* ---------------------------------------------------------
+       전체 배경: CSS 한지 느낌
+    --------------------------------------------------------- */
     body {
-      min-height: 100vh;
-      font-family: "Roboto Condensed", system-ui, -apple-system, BlinkMacSystemFont,
-        "Segoe UI", sans-serif;
-      background: radial-gradient(circle at top, #142045 0, #050814 55%, #020308 100%);
-      color: var(--text-main);
-      display: flex;
-      align-items: center;
-      justify-content: center;
+      margin: 0;
       padding: 24px;
+      font-family: "Roboto Condensed", sans-serif;
+      color: #2f2e2c;
+
+      background:
+        radial-gradient(circle at top left, #fdf7ec 0, #f3e9da 45%, #e7ddcf 100%),
+        repeating-linear-gradient(
+          45deg,
+          rgba(255, 255, 255, 0.35),
+          rgba(255, 255, 255, 0.35) 4px,
+          rgba(230, 221, 209, 0.45) 4px,
+          rgba(230, 221, 209, 0.45) 8px
+        );
+
+      display: flex;
+      justify-content: center;
+      min-height: 100vh;
+      box-sizing: border-box;
     }
 
-    .app-shell {
-      width: 100%;
-      max-width: 920px;
-      background: linear-gradient(135deg, rgba(63, 140, 255, 0.18), rgba(14, 243, 168, 0.08));
-      padding: 1px;
-      border-radius: 24px;
-      box-shadow:
-        0 24px 60px rgba(0, 0, 0, 0.65),
-        0 0 40px rgba(14, 243, 168, 0.2);
-    }
-
+    /* ---------------------------------------------------------
+       전체 레이아웃: 왼쪽 입력, 오른쪽 출력
+    --------------------------------------------------------- */
     .app-inner {
-      background: var(--bg-card);
-      border-radius: 24px;
-      padding: 24px 24px 20px;
+      width: 100%;
+      max-width: 1200px;
       display: grid;
-      grid-template-columns: minmax(0, 0.9fr) minmax(0, 1.1fr);
-      gap: 20px;
+      grid-template-columns: 1fr 1.7fr;
+      gap: 32px;
     }
 
-    @media (max-width: 780px) {
+    @media (max-width: 900px) {
       .app-inner {
-        grid-template-columns: minmax(0, 1fr);
+        grid-template-columns: 1fr;
       }
     }
 
-    .header {
-      grid-column: 1 / -1;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin-bottom: 4px;
-    }
-
-    .brand {
-      display: flex;
-      align-items: center;
-      gap: 12px;
-    }
-
-    .brand-logo {
-      width: 32px;
-      height: 32px;
-      border-radius: 999px;
-      border: 2px solid var(--accent);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-family: "Orbitron", sans-serif;
-      font-size: 16px;
-      box-shadow: 0 0 20px rgba(14, 243, 168, 0.4);
-    }
-
-    .brand-text-main {
-      font-family: "Orbitron", sans-serif;
-      font-size: 20px;
-      text-transform: uppercase;
-      letter-spacing: 0.08em;
-    }
-
-    .brand-text-sub {
-      font-size: 11px;
-      color: var(--text-sub);
-      text-transform: uppercase;
-      letter-spacing: 0.12em;
-    }
-
-    .panel {
-      border-radius: 18px;
-      border: 1px solid var(--border-soft);
-      padding: 18px 16px 14px;
-      background: radial-gradient(circle at top left, rgba(14, 243, 168, 0.16), transparent 55%);
+    /* ---------------------------------------------------------
+       전통 스타일 패널 (입력 / 출력 공통)
+    --------------------------------------------------------- */
+    .panel,
+    .result-panel {
       position: relative;
+      padding: 22px;
+
+      background:
+        linear-gradient(
+          135deg,
+          rgba(255, 255, 255, 0.96),
+          rgba(248, 241, 229, 0.96)
+        ),
+        repeating-linear-gradient(
+          135deg,
+          rgba(255, 255, 255, 0.4),
+          rgba(255, 255, 255, 0.4) 3px,
+          rgba(239, 230, 216, 0.5) 3px,
+          rgba(239, 230, 216, 0.5) 6px
+        );
+
+      border-radius: 14px;
+      border: 2px solid rgba(50, 38, 26, 0.6);
+      box-shadow: 0 8px 18px rgba(0, 0, 0, 0.18);
       overflow: hidden;
     }
 
-    .panel-header {
-      display: flex;
-      justify-content: space-between;
-      align-items: baseline;
-      margin-bottom: 14px;
+    /* 입력 패널은 내용만큼만 높이 */
+    .panel {
+      align-self: flex-start;
     }
 
-    .panel-title {
+    /* 패널 상단 전통 문양 느낌 */
+    .panel::before,
+    .result-panel::before {
+      content: "";
+      position: absolute;
+      top: -40px;
+      left: -40px;
+      width: 140px;
+      height: 140px;
+      background:
+        radial-gradient(circle at 30% 30%, rgba(191, 167, 122, 0.4), transparent 60%),
+        conic-gradient(
+          from 45deg,
+          rgba(145, 106, 60, 0.25),
+          transparent 60%,
+          rgba(145, 106, 60, 0.25)
+        );
+      opacity: 0.25;
+      mix-blend-mode: multiply;
+      pointer-events: none;
+    }
+
+    /* ---------------------------------------------------------
+       제목 (입력 부분 / 출력 부분)
+    --------------------------------------------------------- */
+    .panel-title,
+    .result-title {
+      font-size: 23px;
+      font-weight: bold;
+      color: #5b3e1a;
+      border-left: 6px solid #bfa77a;
+      padding-left: 12px;
+      margin-bottom: 18px;
+    }
+
+    /* ---------------------------------------------------------
+       입력 폼
+    --------------------------------------------------------- */
+    label {
       font-size: 15px;
-      text-transform: uppercase;
-      letter-spacing: 0.15em;
-      color: var(--text-sub);
     }
 
-    .panel-sub {
-      font-size: 11px;
-      color: var(--accent);
-      text-transform: uppercase;
-      letter-spacing: 0.15em;
+    input[type="text"] {
+      width: 100%;
+      padding: 12px 14px;
+      margin-top: 6px;
+      border-radius: 10px;
+      border: 1.5px solid #c2b8a8;
+      background:
+        linear-gradient(
+          to bottom,
+          #fdfbf7,
+          #f6efe4
+        );
+      font-size: 15px;
+      box-sizing: border-box;
     }
 
-    .form-grid {
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-      margin-top: 4px;
-    }
-
-    .field-group {
-      display: flex;
-      flex-direction: column;
-      gap: 4px;
-    }
-
-    .field-hint {
-      font-size: 11px;
-      color: var(--text-sub);
-    }
-
-    input {
-      background: rgba(1, 4, 15, 0.9);
-      border-radius: 999px;
-      border: 1px solid var(--border-soft);
-      padding: 9px 12px;
-      font-size: 13px;
-      color: var(--text-main);
+    input[type="text"]:focus {
+      border-color: #bfa77a;
+      box-shadow: 0 0 6px rgba(191, 167, 122, 0.6);
       outline: none;
-      transition: border 0.16s ease, box-shadow 0.16s ease;
     }
 
-    input::placeholder {
-      color: rgba(154, 163, 194, 0.7);
-    }
-
+    /* 체크박스 줄 – 자연스럽게 왼쪽 정렬 */
     .checkbox-row {
-      display: flex;
+      margin-top: 10px;
+    }
+
+    .checkbox-row label {
+      display: inline-flex;
       align-items: center;
       gap: 6px;
-      font-size: 12px;
-      color: var(--text-sub);
-    }
-
-    .btn-primary {
-      padding: 9px 20px;
-      border-radius: 999px;
-      border: none;
+      font-size: 14px;
       cursor: pointer;
-      font-size: 13px;
-      font-weight: 700;
-      background: linear-gradient(135deg, var(--accent), var(--accent-second));
-      color: #050814;
-      box-shadow:
-        0 0 18px rgba(14, 243, 168, 0.5),
-        0 12px 24px rgba(0, 0, 0, 0.7);
-      text-transform: uppercase;
-      letter-spacing: 0.14em;
-      transition: transform 0.1s ease;
     }
 
-    .btn-primary:hover:not(:disabled) {
+    .checkbox-row input[type="checkbox"] {
+      width: 16px;
+      height: 16px;
+      margin: 0;
+    }
+
+    /* ---------------------------------------------------------
+       버튼 – 한복 금사 느낌
+    --------------------------------------------------------- */
+    .btn-primary {
+      margin-top: 16px;
+      width: 100%;
+      padding: 12px 20px;
+      border: none;
+      border-radius: 12px;
+
+      background: linear-gradient(135deg, #bfa77a, #8c6e3d);
+      color: #fff;
+      cursor: pointer;
+      font-size: 16px;
+      font-weight: bold;
+
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
+      transition: transform 0.08s ease, box-shadow 0.08s ease, filter 0.1s ease;
+    }
+
+    .btn-primary:hover {
+      filter: brightness(1.08);
       transform: translateY(-1px);
+      box-shadow: 0 6px 14px rgba(0, 0, 0, 0.28);
     }
 
-    .result-panel {
-      border-radius: 18px;
-      border: 1px solid var(--border-soft);
-      padding: 18px 16px;
-      background: radial-gradient(circle at top right, rgba(63, 140, 255, 0.2), transparent 55%);
-    }
-
+    /* ---------------------------------------------------------
+       출력 박스 – 커다란 한지 족자 느낌
+    --------------------------------------------------------- */
     .result-box {
-      background: rgba(4, 8, 24, 0.96);
-      border: 1px solid rgba(255, 255, 255, 0.04);
-      padding: 12px;
-      border-radius: 14px;
-      max-height: 320px;
+      margin-top: 6px;
+      padding: 18px;
+
+      background:
+        linear-gradient(
+          180deg,
+          rgba(255, 255, 255, 0.98),
+          rgba(250, 244, 233, 0.98)
+        ),
+        repeating-linear-gradient(
+          0deg,
+          rgba(235, 227, 215, 0.4),
+          rgba(235, 227, 215, 0.4) 2px,
+          rgba(250, 244, 233, 0.4) 2px,
+          rgba(250, 244, 233, 0.4) 4px
+        );
+
+      border-radius: 12px;
+      border: 1.5px solid #d4ccc0;
+
+      min-height: 550px;
+      max-height: 650px;
       overflow-y: auto;
+
+      font-size: 15px;
+      line-height: 1.5;
       white-space: pre-wrap;
-      font-size: 13px;
     }
 
-    .error-text {
-      color: var(--error);
-      font-size: 12px;
-      margin-top: 6px;
+    #error-text {
+      color: #c73434;
+      margin-top: 8px;
+      font-size: 14px;
+      display: none;
     }
   </style>
 </head>
 
 <body>
-  <div class="app-shell">
-    <div class="app-inner">
+  <div class="app-inner">
+    <!-- 입력 패널 -->
+    <section class="panel">
+      <div class="panel-title">입력 부분</div>
 
-      <!-- 왼쪽 입력 -->
-      <section class="panel">
-        <div class="panel-header">
-          <div class="panel-title">입력 패널</div>
-          <div class="panel-sub">TYPE INPUTS</div>
+      <form id="saju-form" onsubmit="register(event)">
+        <label for="birthDate">생년월일 (YYYY-MM-DD)</label>
+        <input type="text" id="birthDate" placeholder="예: 2001-08-15" required />
+
+        <br><br>
+
+        <label for="birthPlace">출생지</label>
+        <input type="text" id="birthPlace" placeholder="예: 광주광역시" required />
+
+        <br><br>
+
+        <label for="birthTime">출생 시간 (HH:MM)</label>
+        <input type="text" id="birthTime" placeholder="예: 13:45" />
+
+        <div class="checkbox-row">
+          <label for="unknownTime">
+            <input type="checkbox" id="unknownTime" />
+            <span>출생 시간을 모릅니다</span>
+          </label>
         </div>
 
-        <form id="saju-form" class="form-grid" onsubmit="register(event)">
+        <button class="btn-primary">사주 분석 요청</button>
 
-          <!-- 생년월일 -->
-          <div class="field-group">
-            <label for="birthDate">생년월일 (YYYY-MM-DD)</label>
-            <input type="text" id="birthDate" placeholder="예: 2001-08-15" required />
-          </div>
+        <div id="error-text"></div>
+      </form>
+    </section>
 
-          <!-- 출생지 -->
-          <div class="field-group">
-            <label for="birthPlace">출생지</label>
-            <input type="text" id="birthPlace" placeholder="예: 광주광역시" required />
-          </div>
-
-          <!-- 출생 시간 -->
-          <div class="field-group">
-            <label for="birthTime">출생 시간 (HH:MM)</label>
-            <input type="text" id="birthTime" placeholder="예: 13:45" />
-            <div class="checkbox-row">
-              <input type="checkbox" id="unknownTime" />
-              <label for="unknownTime">출생 시간을 모릅니다</label>
-            </div>
-          </div>
-
-          <button class="btn-primary" id="submit-btn">사주 분석 요청</button>
-
-          <div class="error-text" id="error-text" style="display:none;"></div>
-        </form>
-      </section>
-
-      <!-- 오른쪽 결과 -->
-      <section class="result-panel">
-        <div class="result-title">사주 결과</div>
-        <div class="result-box" id="result-box">
-          입력 후 결과가 여기에 표시됩니다.
-        </div>
-      </section>
-    </div>
+    <!-- 출력 패널 -->
+    <section class="result-panel">
+      <div class="result-title">출력 부분</div>
+      <div class="result-box" id="result-box">
+        입력 후 결과가 표시됩니다.
+      </div>
+    </section>
   </div>
 
   <script>
-    const SERVER_URL = "https://ce7d8a19-6208-4b13-9c53-fd3c437b8ee6-00-3oh3gkzzkbz3g.sisko.replit.dev/generate_minutes"; // 나중에 백엔드 URL 넣기
+    const SERVER_URL =
+      "https://ce7d8a19-6208-4b13-9c53-fd3c437b8ee6-00-3oh3gkzzkbz3g.sisko.replit.dev/generate_minutes";
 
     async function register(event) {
       event.preventDefault();
@@ -282,42 +286,30 @@
       const birthPlace = document.getElementById("birthPlace").value.trim();
       const unknownTime = document.getElementById("unknownTime").checked;
       let birthTime = document.getElementById("birthTime").value.trim();
+
+      if (unknownTime) birthTime = null;
+
       const resultBox = document.getElementById("result-box");
       const errorText = document.getElementById("error-text");
 
       errorText.style.display = "none";
-
-      if (unknownTime) birthTime = null;
-
-      const payload = {
-        birthDate,
-        birthPlace,
-        birthTime
-      };
-
-      resultBox.textContent = "서버에 요청 중...";
+      resultBox.textContent = "사주 분석 중…";
 
       try {
         const response = await fetch(SERVER_URL, {
           method: "POST",
           headers: { "Content-Type": "application/json" },
-          body: JSON.stringify(payload)
+          body: JSON.stringify({ birthDate, birthPlace, birthTime })
         });
 
-        if (!response.ok) throw new Error("응답 오류");
+        if (!response.ok) throw new Error("서버 응답 오류");
 
         const data = await response.json();
-
-        const fortuneText =
-          data.fortuneText ||
-          data.result ||
-          JSON.stringify(data, null, 2);
-
-        resultBox.textContent = fortuneText;
+        resultBox.textContent =
+          data.fortuneText || data.result || JSON.stringify(data, null, 2);
       } catch (err) {
         resultBox.textContent =
-          "SERVER_URL이 비어있어 요청이 실패했습니다.\n백엔드 주소 연결 후 정상 작동합니다.";
-
+          "요청 실패. 서버 URL 또는 네트워크 상태를 확인해 주세요.";
         errorText.style.display = "block";
         errorText.textContent = "오류: " + err.message;
       }
@@ -325,12 +317,8 @@
 
     document.getElementById("unknownTime").addEventListener("change", (e) => {
       const timeInput = document.getElementById("birthTime");
-      if (e.target.checked) {
-        timeInput.disabled = true;
-        timeInput.value = "";
-      } else {
-        timeInput.disabled = false;
-      }
+      timeInput.disabled = e.target.checked;
+      if (e.target.checked) timeInput.value = "";
     });
   </script>
 </body>
